# lego-sorter

./: .gitignore  LICENSE  README.md  class_train.py  config.yaml  obj_det_train.py  part_classes.json  pyproject.toml  requirements.txt
checkpoints/: configs.txt
classification/common/: tools.py
classification/data/: download.py  generate_lego_part_classes.py
classification/model/: engine.py  model.py  train.py
models/: model_configurations.txt
notebooks/: brickognize_test.ipynb  kaggle_test.ipynb  model_predictions.ipynb  plot_results.ipynb  test_classif_modelV1.ipynb  test_modelV1.ipynb  test_objdet_model.ipynb
notebooks/.ipynb_checkpoints/: test_modelV1-checkpoint.ipynb
obj_detection/common/: utils.py
obj_detection/data/: download.py  generate_lego_part_classes.py
obj_detection/evaluate/: predictions.py
obj_detection/model/: model.py  train.py
src/classification/evaluate/: predictions.py
src/classification/model/: engine.py  model.py  models.py  train.py  trainer.py
src/classification/model/.ipynb_checkpoints/: train-checkpoint.py
src/classification/preprocess/: build_features.py
src/common/: tools.py  utils.py
src/data/: download.py  generate_lego_part_classes.py  part_classes.json
src/evaluate/: predictions.py
src/model/: engine.py  model.py  train.py
src/obj_detection/model/: engine.py  model.py  models.py  train.py  trainer.py
src/obj_detection/preprocess/: build_features.py
src/preprocess/: build_features.py
