[project]
name = "lego-sorter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.7",
    "argparse>=1.4.0",
    "effdet>=0.4.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "kaggle==1.6.17",
    "matplotlib>=3.10.1",
    "mlxtend>=0.23.4",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "polars>=1.29.0",
    "pyyaml>=6.0.2",
    "rebrick>=0.4.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "torch==2.7.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.7.1",
    "torchvision==0.22.0",
    "tqdm>=4.67.1",
    "wget>=3.2",
    "xmltodict>=0.14.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
